tests/bad/bad003.lat
// Repeated argument name
int f(int x, int x) {
   return x;
}